--- a/index.html
+++ b/index.html
@@ -23,16 +23,16 @@
     <meta content='initial-scale=1.0,user-scalable=no,maximum-scale=1' media='(device-height: 568px)' name='viewport'>
     <meta content='yes' name='apple-mobile-web-app-capable'>
     <meta content='black-translucent' name='apple-mobile-web-app-status-bar-style'>
-    <link href='http://ilinicz.github.io/anoise/favicon.ico' rel='shortcut icon' type='image/x-icon'>
-    <link href='http://ilinicz.github.io/anoise/favicon.ico' rel='icon' type='image/x-icon'>
-    <link href='http://ilinicz.github.io/anoise/favicon.ico' rel='shortcut icon'>
+    <link href='//vilinicz.github.io/anoise/favicon.ico' rel='shortcut icon' type='image/x-icon'>
+    <link href='//vilinicz.github.io/anoise/favicon.ico' rel='icon' type='image/x-icon'>
+    <link href='//vilinicz.github.io/anoise/favicon.ico' rel='shortcut icon'>
     <link href='/images/apple-touch-icon-precomposed.png' rel='apple-touch-icon-precomposed'>
     <link href='/images/apple-touch-icon-57x57-precomposed.png' rel='apple-touch-icon-precomposed' sizes='57x57'>
     <link href='/images/apple-touch-icon-72x72-precomposed.png' rel='apple-touch-icon-precomposed' sizes='72x72'>
     <link href='/images/apple-touch-icon-114x114-precomposed.png' rel='apple-touch-icon-precomposed' sizes='114x114'>
     <link href="assets/stylesheets/application-8d65682a.css" media="screen" rel="stylesheet" type="text/css" />
     <link href="zoombox/zoombox-bb5b7fab.css" media="screen" rel="stylesheet" type="text/css" />
-    <link href='http://yui.yahooapis.com/pure/0.5.0/grids-responsive-min.css' rel='stylesheet'>
+    <link href='//yui.yahooapis.com/pure/0.5.0/grids-responsive-min.css' rel='stylesheet'>
   </head>
   <body class='intro'>
     <div class='pure-g' id='layout'>
